<resources>
    <string name="app_name">360 Pushup Challenge</string>
    <string name="display_image_of_pushup_position">Display image of pushup position</string>
    <string name="i_am_done">I AM DONE !!</string>
    <string name="initial_text">0</string>
    <string name="extra_last_path">pushupType</string>

    //Insert_Update_Delete Warnings
    <string name="insert_successful">Record saved</string>
    <string name="insert_failed">Error with saving Record</string>
    <string name="update_successful">Update Successful</string>
    <string name="update_failed">Update Failed</string>
    <string name="delete_successful">Deleted Successfully</string>
    <string name="unknown_info">Unknown</string>
    <string name="extra_type_title">title</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    //Pushup Types
    <string name="name_knee_pushup">Knee Push-up</string>
    <string name="name_classic">Classic</string>
    <string name="name_wide_grip">Wide Grip</string>
    <string name="name_close_grip">Close Grip</string>
    <string name="name_stacked">Stacked</string>
    <string name="name_raised_leg">Raised Leg</string>
    <string name="name_reversed">Reversed</string>
    <string name="name_decline">Decline</string>
    <string name="name_incline">Incline</string>
    <string name="name_knuckle">Knuckle</string>
    <string name="name_clapping">Clapping</string>
    <string name="name_one_armed">One Armed</string>

    //Pushup LastPath
    <string name="last_path_knee_pushup">knee</string>
    <string name="last_path_classic">classic</string>
    <string name="last_path_wide_grip">wide_grip</string>
    <string name="last_path_closed_grip">closed_grip</string>
    <string name="last_path_stacked">stacked</string>
    <string name="last_path_raised_leg">raised_leg</string>
    <string name="last_path_reversed">reversed</string>
    <string name="last_path_decline">decline</string>
    <string name="last_path_incline">incline</string>
    <string name="last_path_knuckle">knuckle</string>
    <string name="last_path_clapping">clapping</string>
    <string name="last_path_one_armed">one_armed</string>
    <string name="personal_record">Personal Record</string>
    <string name="attempt">Attempt</string>
    <string name="initial_zero">0</string>
    <string name="appwidget_text">Loading . .</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="break_your_record">BREAK YOUR RECORD</string>
    <string name="widget_title_text">widget_title_text</string>
    <string name="ad_demo">ca-app-pub-3940256099942544/6300978111</string>
    <string name="saved_counter_value">savedCounterValue</string>
    <string name="text_type_intent_share">text/plain</string>
    <string name="share_intent_text">Hi check this awesome app #360PushupChallenge</string>
    <string name="share_intent_temp_text">Share about app</string>
    <string name="tab_title_stats">Stats</string>
    <string name="record_broke_text">Congrats, Your broke your own record !</string>
    <string name="record_broke_pre_text">more to break the record</string>
    <string name="tab_title_push">Push It</string>
    <string name="app_tag">#360PushupChallenge</string>
    <string name="share_text_prefix">Hi, I just did</string>
    <string name="push_up">Push up,</string>
    <string name="push_ups">Push ups,</string>
    <string name="project">Projects</string>
    <string name="saved_random_quote_value">saved_random_quote_value</string>
    <string name="dropdown_arrow">dropdown_arrow</string>
    <string name="pushup_name_preview">pushup_name_preview</string>
</resources>
